[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menus/SubTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/UI/slider_under.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/slider_texture.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menus/ButtonTypeD.gd" type="Script" id=4]

[node name="ButtonTypeD" type="HBoxContainer"]
margin_right = 640.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( -336, -200 )
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_right = 289.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
action_mode = 0
text = "Test"
flat = true
align = 0

[node name="SliderBar" type="TextureProgress" parent="."]
margin_left = 293.0
margin_top = 12.0
margin_right = 640.0
margin_bottom = 43.0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.7
value = 70.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Slider" type="HSlider" parent="SliderBar"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -8.0
margin_right = 352.0
margin_bottom = 32.0
focus_mode = 0
mouse_filter = 1
step = 5.0
value = 100.0
scrollable = false

[node name="Marker" type="ColorRect" parent="SliderBar"]
show_behind_parent = true
margin_left = 239.0
margin_top = -5.0
margin_right = 247.0
margin_bottom = 36.0
mouse_filter = 2
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="value_changed" from="SliderBar/Slider" to="." method="_on_Slider_value_changed"]
